productos.js y productos.css. Faltan agregar más imagenes

--- a/front/productos.html
+++ b/front/productos.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="/front/css/productos.css">
     <title>Marvel Comics</title>
 </head>
 <body>
@@ -22,6 +22,6 @@
     <section id="card_section-root">
 
     </section>
-    <script src="/app.js"></script>
+    <script src="/front/js/productos.js"></script>
 </body>
 </html>
