--- a/front/carrusel.html
+++ b/front/carrusel.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="/carrusel.css">
+    <link rel="stylesheet" href="/front/css/carrusel.css">
     <title>Carrusel de imagenes</title>
 </head>
 <body>
@@ -14,16 +14,16 @@
         <div class="carruseles" id="slider">
            
             <section class="slider-section">
-                <img src="/img/megasale.jpg">
+                <img src="/front/images/megasale.jpg">
             </section>
             <section class="slider-section">
-                <img src="/img/sale.jpg">
+                <img src="/front/images/pow.jpg">
             </section>
             <section class="slider-section">
-                <img src="/img/boom.png">
+                <img src="/front/images/sale.jpg">
             </section>
             <section class="slider-section">
-                <img src="/img/comic.jpg">
+                <img src="/front/images/boom.png">
             </section>
           
         </div>
@@ -31,6 +31,6 @@
         <div class="btn-right"><i class='bx bx-chevron-right'></i></div>
     </div>
 
-    <script src="/carrusel.js"></script>
+    <script src="/front/js/carrusel.js"></script>
 </body>
 </html>
