cambio fonts y resposive

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <div class="first_text">
                         Contacto
                     </div>
-                    <div class="intro">
+                    <div class="intro_contact_text">
                         Si tenes alguna pregunta o sugerencia, no dudes en comunicarte con nosotros. 
                         Nuestro equipo está aquí para ayudarte y proporcionarte cualquier información que necesites.
                     </div>
@@ -57,10 +57,18 @@
                             <input type="email" placeholder="Ingrese su email" required>
                         </div>
                         <div class="input_text">
-                            <textarea name="" id="message" cols="40" rows="11" placeholder="Mensaje" required></textarea>
+                            <textarea name="" id="message" cols="30" rows="8" placeholder="Mensaje" required></textarea>
                         </div>
                         <input class="btn_submit" type="submit" value="Enviar Mensaje">
                     </form>
+
+                    <div class="social_links_form">
+                        <ul class="social_list">
+                            <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-square-twitter"></i></a></li>
+                            <li><a href="#"><i class="fa-brands fa-square-instagram"></i></a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
