Agrego fotos, anclas para marvel.html y dc.html

--- a/front/productos.html
+++ b/front/productos.html
@@ -15,8 +15,8 @@
     <h1> Nuestros Productos</h1>
 
     <div class="card_section-titulo">
-    <h2 class="card_section-titulo1">Marvel Comics</h2>
-    <h2 class="card_section-titulo2"> DC Comics</h2>
+    <a href="/front/productos.html"><h2 class="card_section-titulo1">Marvel Comics</h2></a>
+    <a href="/front/productos.html"><h2 class="card_section-titulo2"> DC Comics</h2></a>
 </div>
 
     <section id="card_section-root">
