--- a/front/dcProducts.html
+++ b/front/dcProducts.html
@@ -17,84 +17,84 @@
     <h1>Nuestros Productos</h1>
 
     <div class="card_section-titulo">
-      <a href="/front/productos.html"
+      <a href="/front/marvelProducts.html"
         ><h2 class="card_section-titulo1">Marvel Comics</h2></a
       >
-      <a href="/front/productos.html"
+      <a href="/front/dcProducts.html"
         ><h2 class="card_section-titulo2">DC Comics</h2></a
       >
     </div>
 
     <section id="card_section-root">
       <div>
-        <img src="/front/images/dc-batman.jpg" alt="boom" />
+        <img src="/front/images/dc-batman.jpg" alt="Imagen de un comic de batman" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Batman</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-batmanReborn.jpg" alt="boom" />
+        <img src="/front/images/dc-batmanReborn.jpg" alt="Imagen de un comic de batman" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Batman</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-batgirl.jpg" alt="boom" />
+        <img src="/front/images/dc-batgirl.jpg" alt="Imagen de un comic de batichica" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Batichica</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-justiceLeague.jpg" alt="boom" />
+        <img src="/front/images/dc-justiceLeague.jpg" alt="Imagen de un comic de la liga de la justicia" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Liga de la Justicia</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-batmanyFlashjpg.jpg" alt="boom" />
+        <img src="/front/images/dc-batmanyFlashjpg.jpg" alt="Imagen de un comic de batman con flash" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Batman</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-wonderWomen.jpg" alt="boom" />
+        <img src="/front/images/dc-wonderWomen.jpg" alt="Imagen de un comic de la mujer maravilla" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Mujer Maravilla</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-flash.jpg" alt="boom" />
+        <img src="/front/images/dc-flash.jpg" alt="Imagen de un comic de flash" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Flash</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-superGirlpg.jpg" alt="boom" />
+        <img src="/front/images/dc-superGirlpg.jpg" alt="Imagen de un comic de superchica" />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Supergirl</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
       <div>
-        <img src="/front/images/dc-supermanLast.jpg" alt="boom" />
+        <img src="/front/images/dc-supermanLast.jpg" alt="Imagen de un comic de superman"  />
         <div class="card-content">
           <h3>$$200.000</h3>
-          <h4>boom</h4>
+          <h4>Batman</h4>
           <button class="button">Agregar al carrito</button>
         </div>
       </div>
