--- a/front/marvelProducts.html
+++ b/front/marvelProducts.html
@@ -15,8 +15,8 @@
     <h1> Nuestros Productos</h1>
 
     <div class="card_section-titulo">
-    <a href="/front/productos.html"><h2 class="card_section-titulo1">Marvel Comics</h2></a>
-    <a href="/front/productos.html"><h2 class="card_section-titulo2"> DC Comics</h2></a>
+    <a href="/front/marvelProducts.html"><h2 class="card_section-titulo1">Marvel Comics</h2></a>
+    <a href="/front/dcProductos.html"><h2 class="card_section-titulo2"> DC Comics</h2></a>
 </div>
 
     <section id="card_section-root">
