--- a/front/footer.html
+++ b/front/footer.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compactible" content="IE=edge"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/footer_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 </head>
 <body>
