Se agrega footer al detalle de producto

--- a/front/detail_product_pages/Detalle_Comic_DD.html
+++ b/front/detail_product_pages/Detalle_Comic_DD.html
@@ -18,8 +18,6 @@
             <label for="check">
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
-
-
             </label>
             <a class="navbar-logo" href="#">
                 <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
@@ -128,6 +126,50 @@
 
         </div>
 
+    </div>
+    <footer class="footer" id="footer">
+        <div class="container">
+            <div class="footer-row">
+                <div class="footer-links">
+                    <h4>Preguntas frecuentes</h4>
+                    <ul>
+                        <li><a class="link-sec" href="#">Como comprar</a></li>
+                        <li><a href="#">Politica de envios</a></li>
+                        <li><a href="#">Novedades</a></li>
+                        <li><a href="#">Precios mayoristas</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>MEDIOS DE PAGO</h4>
+                    <ul>
+                        <li><a href="#">Tarjetas de Crédito</a></li>
+                        <li><a href="#">Tarjetas de Débito</a></li>
+                        <li><a href="#">Transferencias</a></li>
+                        <li><a href="#">Efectivo</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4>PLANET SUPERHEROES CENTRO</h4>
+                    <ul>
+                        <li><a href="#">Galeria Muñoz-9 de julio 160</a></li>
+                        <li><a href="#">(351) 43727282</a></li>
+                        <li><a href="#">info@planetsuper.com.ar</a></li>
+                        <li><a href="#">Lunes a Sabado:10:00 a 18:00</a></li>
+                    </ul>
+                </div>
+                <div class="footer-links">
+                    <h4> SIGUENOS EN NUESTRAS REDES</h4> 
+                    <div class="social-link">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>    
+    </footer>
+    <div class="copyright">
+        &copy; Desarrolladores 2.0
     </div>
     <script src="/front/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
