arreglos del navbar

--- a/Header/index.html
+++ b/Header/index.html
@@ -26,30 +26,39 @@
         </button>
 
         <div class="collapse navbar-collapse container-fluid" id="navbarSupportedContent">
-          <form class="d-flex" role="search">
+         
+          <!-- <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="  ¿Que estas buscando? " aria-label="Search" id="search"> 
             <button class="btn btn-outline" type="submit">
               <img id="lens" src="./img/buscador.png" alt="">
             </button>
-          </form>
+          </form> -->
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 container-fluid ul">
+            <!-- me-auto  mb-2  -->
             <li class="nav-item li">
-              <a class="nav-link" id="qs" aria-current="page" href="#"> ¿ QUIENES SOMOS ?</a>
+              <a class="nav-link" id="btns" aria-current="page" href="#"> ¿ QUIENES SOMOS ?</a>
             </li>
             <li class="nav-item li">
-              <a class="nav-link" id="product" href="#">PRODUCTOS</a>
+              <a class="nav-link" id="btns" href="#">PRODUCTOS</a>
             </li>
             <li class="nav-item li">
-              <a class="nav-link" id="contact"href="#" >CONTACTO</a>
+              <a class="nav-link" id="btns"href="#" >CONTACTO</a>
+            </li>
+            <li class="nav-item li">
+              <a class="nav-link" id="btns"href="#" >Ingresar</a>
+            </li>
+            <li class="nav-item li">
+              <a class="nav-link" id="btns"href="#" >Registrarse</a>
             </li>
           </ul>
           
-          <div class="collapse navbar-collapse user" id="navbarSupportedContent">
+          <!-- <div class="collapse navbar-collapse user" id="navbarSupportedContent">
+            container-fluid 
             <a class="navbar-brand" href="#">
               <img id="user" src="./img/user1.png" alt="User">
             </a>
-          </div>
+         </div> -->
         </div>
       </div>
     </nav>
