--- a/index.html
+++ b/index.html
@@ -9,8 +9,81 @@
       src="https://kit.fontawesome.com/6ff66d206f.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>   
 </head>
 <body>
+    <!-- Header -->
+    <header class="">
+        <nav class="navbar">
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fas fa-bars" id="btn-nav"></i>
+                <i class="fas fa-times" id="cancel"></i>
+            </label>
+            <a class="navbar-logo" href="#">
+                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            </a>            
+            <ul class="nav-op">                        
+                <li class="new-li">
+                    <a class="nav-link" href="#">¿QUIENES SOMOS?</a>
+                </li>
+                <li class="new-li">
+                    <a class="nav-link" href="#">PRODUCTOS</a>
+                </li>
+                <li class="new-li">
+                    <a class="nav-link" href="#">CONTACTO</a>
+                </li>
+                <li class="new-li">
+                    <a class="nav-link" href="#">INGRESAR</a>
+                </li>
+                <li class="new-li">
+                    <a class="nav-link" href="#">REGISTRO</a>
+                </li>
+            </ul>   
+        </nav>
+    </header> 
+
+    <!-- Carrusel -->
+    <section> 
+    <div class="container-carousel">
+        <div class="carruseles" id="slider">
+           
+            <section class="slider-section">
+                <img src="/front/images/megasale.jpg">
+            </section>
+            <section class="slider-section">
+                <img src="/front/images/pow.jpg">
+            </section>
+            <section class="slider-section">
+                <img src="/front/images/sale.jpg">
+            </section>
+            <section class="slider-section">
+                <img src="/front/images/boom.png">
+            </section>
+          
+        </div>
+        <div class="btn-left"><i class='bx bx-chevron-left'></i></div>
+        <div class="btn-right"><i class='bx bx-chevron-right'></i></div>
+    </div>
+</section>
+<!-- Sección Banner -->
+<section id="banner">
+<div class="container">
+    <div class="button">
+        <img src="../BOTONERA/images/free.png" alt="Envío gratis Córdoba capital">
+        <p class="button-text">Envío gratis Córdoba capital</p>
+    </div>
+    <div class="button">
+        <img src="../BOTONERA/images/tarjetas.png" alt="Todos los medios de pago">
+        <p class="button-text">Todos los medios de pago</p>
+    </div>
+    <div class="button">
+        <img src="../BOTONERA/images/30dto.png" alt="Descuentos Exclusivos">
+        <p class="button-text">Descuentos Exclusivos</p>
+    </div>
+</div>
+</section>
+
     <!-- formulario de contacto -->
     <section id="form">
         <div class="form_contact__container">
@@ -74,4 +147,55 @@
         </div>
     </section>
 </body>
+
+<!-- footer -->
+<footer class="footer" id="footer">
+    <div class="container">
+        <div class="footer-row">
+            <div class="footer-links">
+                <h4>Preguntas frecuentes</h4>
+                <ul>
+                    <li><a class="link-sec" href="#">Como comprar</a></li>
+                    <li><a href="#">Política de envíos</a></li>
+                    <li><a href="#">Novedades</a></li>
+                    <li><a href="#">Precios mayoristas</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>MEDIOS DE PAGO</h4>
+                <ul>
+                    <li><a href="#">Tarjetas de Crédito</a></li>
+                    <li><a href="#">Tarjetas de Débito</a></li>
+                    <li><a href="#">Transferencias</a></li>
+                    <li><a href="#">Efectivo</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>PLANET SUPERHEROES CENTRO</h4>
+                <ul>
+                    <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
+                    <li><a href="#">(351) 43727282</a></li>
+                    <li><a href="#">info@planetsuper.com.ar</a></li>
+                    <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4> SÍGUENOS EN NUESTRAS REDES</h4> 
+                <div class="social-link">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>    
+</footer>
+<div class="copyright">
+    &copy; Desarrolladores 2.0
+</div>
+<script src="/front/js/script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
+</script>
+<script src="/front/js/carrusel.js"></script>
 </html>
