unificacion y ruteo de login

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
                     <a class="nav-link" href="#">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">CONTACTO</a>
+                    <a class="nav-link" href="#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">INGRESAR</a>
+                    <a class="nav-link" href="./login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
                     <a class="nav-link" href="#">REGISTRO</a>
