features integrados about us y register

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>            
             <ul class="nav-op">                        
                 <li class="new-li">
-                    <a class="nav-link" href="#">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="./about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
                     <a class="nav-link" href="#">PRODUCTOS</a>
@@ -37,7 +37,7 @@
                     <a class="nav-link" href="./login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">REGISTRO</a>
+                    <a class="nav-link" href="./registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
