agrego footer a las paginas, enrutado finalizado

--- a/login.html
+++ b/login.html
@@ -17,6 +17,8 @@
         <input class="controles" type="password" name="Contraseña" value="" placeholder="Contraseña">
         <input class="botom" type="submit" name="" value="Ingresar">
             <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+        
+        <a class="go_back" href="/index.html">Volver al Inicio</a>
     </section>
 <body>
 </html>
