--- a/registro.html
+++ b/registro.html
@@ -44,6 +44,8 @@
          <p>Al registrarte, aceptas nuestras Condiciones de uso y Politica de privacidad. </p>
          <p>¿Ya tenés una cuenta?<a class="link" href="login.html"> Iniciá sesión</a></p>
         </div>
+        
+        <a class="go_back" href="/index.html">Volver al Inicio</a>
     </section>
 </body>
 </html>
