--- a/about.html
+++ b/about.html
@@ -9,39 +9,43 @@
     <link rel="stylesheet" href="/front/css/styles_about.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>About</title>
+    <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-     <!-- Header -->
-     <!-- <header>
+    <!-- Header -->
+    <header>
         <nav class="navbar">
+            <a class="navbar-logo" href="/index.html">
+                <img class="logo" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            </a>
+            <!-- Menu Hamburguesa -->
             <input type="checkbox" id="check">
             <label for="check">
                 <i class="fas fa-bars" id="btn-nav"></i>
                 <i class="fas fa-times" id="cancel"></i>
             </label>
-            <a class="navbar-logo" href="#">
-                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
-            </a>            
-            <ul class="nav-op">                        
-                <li class="new-li">
-                    <a class="nav-link" href="./about.html">¿QUIENES SOMOS?</a>
+            <!-- Fin Menu Hamburguesa  -->
+            <ul class="nav__links">  
+                <li>
+                    <a href="/index.html">INICIO</a>
+                </li>                      
+                <li>
+                    <a href="/about.html">¿QUIENES SOMOS?</a>
                 </li>
-                <li class="new-li">
-                    <a class="nav-link" href="#">PRODUCTOS</a>
+                <li>
+                    <a href="/front/marvelProducts.html">PRODUCTOS</a>
                 </li>
-                <li class="new-li">
-                    <a class="nav-link" href="#form">CONTACTO</a>
+                <li>
+                    <a href="/login.html">INGRESAR</a>
                 </li>
-                <li class="new-li">
-                    <a class="nav-link" href="./login.html">INGRESAR</a>
-                </li>
-                <li class="new-li">
-                    <a class="nav-link" href="#">REGISTRO</a>
+                <li>
+                    <a href="/registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
-    </header>  -->
+    </header> 
+
     <main>
         <section id="aboutMain">
             <h1>Planet Superheroes</h1>
@@ -104,6 +108,51 @@
             </div>
         </section>
     </main>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+<!-- footer -->
+<footer class="footer" id="footer">
+    <div class="container">
+        <div class="footer-row">
+            <div class="footer-links">
+                <h4>Preguntas frecuentes</h4>
+                <ul>
+                    <li><a class="link-sec" href="#">Como comprar</a></li>
+                    <li><a href="#">Política de envíos</a></li>
+                    <li><a href="#">Novedades</a></li>
+                    <li><a href="#">Precios mayoristas</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>MEDIOS DE PAGO</h4>
+                <ul>
+                    <li><a href="#">Tarjetas de Crédito</a></li>
+                    <li><a href="#">Tarjetas de Débito</a></li>
+                    <li><a href="#">Transferencias</a></li>
+                    <li><a href="#">Efectivo</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4>PLANET SUPERHEROES CENTRO</h4>
+                <ul>
+                    <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
+                    <li><a href="#">(351) 43727282</a></li>
+                    <li><a href="#">info@planetsuper.com.ar</a></li>
+                    <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+                </ul>
+            </div>
+            <div class="footer-links">
+                <h4> SÍGUENOS EN NUESTRAS REDES</h4> 
+                <div class="social-link">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>    
+</footer>
+<div class="copyright">
+    &copy; Desarrolladores 2.0
+</div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </html>
