--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="./about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="#">PRODUCTOS</a>
+                    <a class="nav-link" href="/front/marvelProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
                     <a class="nav-link" href="#form">CONTACTO</a>
