--- a/front/dcProducts.html
+++ b/front/dcProducts.html
@@ -12,8 +12,41 @@
     />
     <link rel="stylesheet" href="/front/css/dcProducts.css" />
     <title>Marvel Comics</title>
+    <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
   </head>
   <body>
+      <!-- Header -->
+      <header>
+        <a class="navbar-logo" href="/index.html">
+            <img class="logo" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+        </a>  
+        <nav class="navbar">
+            <!-- Menu Hamburguesa -->
+            <input type="checkbox" id="check">
+            <label for="check">
+                <i class="fas fa-bars" id="btn-nav"></i>
+                <i class="fas fa-times" id="cancel"></i>
+            </label>  
+            <!-- Fin Menu Hamburguesa  -->
+            <ul class="nav__links">  
+                <li>
+                    <a href="/index.html">INICIO</a>
+                </li>                      
+                <li>
+                    <a href="/about.html">¿QUIENES SOMOS?</a>
+                </li>
+                <li>
+                    <a href="/front/marvelProducts.html">PRODUCTOS</a>
+                </li>
+                <li>
+                    <a href="/login.html">INGRESAR</a>
+                </li>
+                <li>
+                    <a href="/registro.html">REGISTRO</a>
+                </li>
+            </ul>   
+        </nav>
+    </header> 
     <h1>Nuestros Productos</h1>
 
     <div class="card_section-titulo">
@@ -100,4 +133,49 @@
       </div>
     </section>
   </body>
+  <!-- footer -->
+<footer class="footer" id="footer">
+  <div class="container">
+      <div class="footer-row">
+          <div class="footer-links">
+              <h4>Preguntas frecuentes</h4>
+              <ul>
+                  <li><a class="link-sec" href="#">Como comprar</a></li>
+                  <li><a href="#">Política de envíos</a></li>
+                  <li><a href="#">Novedades</a></li>
+                  <li><a href="#">Precios mayoristas</a></li>
+              </ul>
+          </div>
+          <div class="footer-links">
+              <h4>MEDIOS DE PAGO</h4>
+              <ul>
+                  <li><a href="#">Tarjetas de Crédito</a></li>
+                  <li><a href="#">Tarjetas de Débito</a></li>
+                  <li><a href="#">Transferencias</a></li>
+                  <li><a href="#">Efectivo</a></li>
+              </ul>
+          </div>
+          <div class="footer-links">
+              <h4>PLANET SUPERHEROES CENTRO</h4>
+              <ul>
+                  <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
+                  <li><a href="#">(351) 43727282</a></li>
+                  <li><a href="#">info@planetsuper.com.ar</a></li>
+                  <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+              </ul>
+          </div>
+          <div class="footer-links">
+              <h4> SÍGUENOS EN NUESTRAS REDES</h4> 
+              <div class="social-link">
+                  <a href="#"><i class="fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="fab fa-instagram"></i></a>
+                  <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+              </div>
+          </div>
+      </div>
+  </div>    
+</footer>
+<div class="copyright">
+  &copy; Desarrolladores 2.0
+</div>
 </html>
