Arreglos en Sección Quienes Somos

--- a/front/detail_product_pages/Detalle_Comic_Batman.html
+++ b/front/detail_product_pages/Detalle_Comic_Batman.html
@@ -12,7 +12,7 @@
     <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>   
 </head>
 <body>
-    <header class="">
+    <header class="header">
         <nav class="navbar">
             <input type="checkbox" id="check">
             <label for="check">
