--- a/Header/index.html
+++ b/Header/index.html
@@ -7,7 +7,7 @@
         <!-- FAVICON -->
         <link rel="shortcut icon" href="./img/logo_planet - copia.ico" type="image/x-icon">
         <!--Estilo local-->
-        <link rel="stylesheet" href=".//style.css">
+        <link rel="stylesheet" href="./style.css">
         <!--Bootstrap CSS-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
