--- a/front/detail_product_pages/Detalle_Comic_Spiderman.html
+++ b/front/detail_product_pages/Detalle_Comic_Spiderman.html
@@ -48,32 +48,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
+                        <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-spiderman.jpg" alt="Spiderman_Comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Batman Comic</h2>
+                <h2 class="product-title">Spiderman</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -81,19 +81,19 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    <span>4.5 (12)</span>
+                    <span>4.7 (5)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$3800.00</span></p>
-                    <p class="new-price">Ahora: <span>$3040.00 (20% off)</span></p>
+                    <p class="last-price">Antes: <span>$34000.00</span></p>
+                    <p class="new-price">Ahora: <span>$30600.00 (10% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>El título es simple. El talento es espectacular. Presentada en escuetos tonos de blanco y negro que representan con facilidad la cosmovisión de Batman, llega esta colección de las aventuras del Caballero Oscuro. Con historias y dibujos de una alineación estelar de creadores de la industria del cómic, no es de extrañar que esta colección haya sido galardonada con el prestigioso premio Eisner en la categoría mejor antología y mejor historia corta (Héroes, por Archie Goodwin y Gary Gianni). </p>
-                    <p>Páginas: 224<br>
-                        Formato: 26x17x2cm<br>
-                        Peso: 0.6 kgs..<br>
-                        ISBN: 978-987-724-803-6</p>
+                    <p>Un gigantesco volumen, que reúne tanto Universo Spiderman como Spidergedón, las dos grandes sagas dedicadas a unir a todos los Hombres y Mujeres Araña, con sus respectivos cruces. En primer lugar, Dan Slott (El Asombroso Spiderman) y Olivier Coipel (Dinastía de M) se unen para ofrecerte el mayor evento en la historia de Spiderman. Más peligroso que nunca, Morlun amenaza a todos los Hombres Araña que existen en el Multiverso, pero esta vez no está solo: tiene a la familia a su lado. ¡Todos los Spiderman que han existido están en peligro! A continuación, Los Herederos han escapado y planean acabar con todas las arañas que existen. Será necesario un ejército para hacerlos frente. Spiderman, Octopus, Spider-Gwen, Miles, Spiderwoman, el Spiderman de PS4... y todos los demás estarán aquí. Contiene la traducción de los comic books originales Edge of Spider-Verse números 1 a 5, FCBD 2014: GotG, The Amazing Spider-Man números 4 y 7 a 15, Spider-Verse números 1 a 2, The Superior Spider-Man números 32 a 33, Spider-Man 2099 números 5 a 8, Scarlet Spiders números 1 a 3, Spider-Woman números 1 a 4, Spider-Verse Team-Up números 1 a 3 y Edge of Spider publicados en USA por Marvel Comics.</p>
+                    <p>Páginas: 300<br>
+                        Formato: 20x29x5cm<br>
+                        Peso: 0.80 kgs<br>
+                        ISBN: 9788416998166</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
