--- a/front/detail_product_pages/Detalle_Comic_Superman_y_Wonderwoman.html
+++ b/front/detail_product_pages/Detalle_Comic_Superman_y_Wonderwoman.html
@@ -48,32 +48,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                        <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
+                        <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
+                        <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
+                            <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
+                            <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                            <img src="/front/images/dc-wonderWomen.jpg" alt="Superman_y_Wonderwoman">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Batman Comic</h2>
+                <h2 class="product-title">Superman y WonderWoman</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -81,19 +81,19 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    <span>4.5 (12)</span>
+                    <span>4.7 (5)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$3800.00</span></p>
-                    <p class="new-price">Ahora: <span>$3040.00 (20% off)</span></p>
+                    <p class="last-price">Antes: <span>$14000.00</span></p>
+                    <p class="new-price">Ahora: <span>$9800.00 (30% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>El título es simple. El talento es espectacular. Presentada en escuetos tonos de blanco y negro que representan con facilidad la cosmovisión de Batman, llega esta colección de las aventuras del Caballero Oscuro. Con historias y dibujos de una alineación estelar de creadores de la industria del cómic, no es de extrañar que esta colección haya sido galardonada con el prestigioso premio Eisner en la categoría mejor antología y mejor historia corta (Héroes, por Archie Goodwin y Gary Gianni). </p>
-                    <p>Páginas: 224<br>
-                        Formato: 26x17x2cm<br>
-                        Peso: 0.6 kgs..<br>
-                        ISBN: 978-987-724-803-6</p>
+                    <p>¡LAS MEJORES AVENTURAS DEL HOMBRE DE ACERO Y LA PRINCESA GUERRERA! Desde 1940, Wonder Woman ha sido un símbolo de la libertad, la justicia y la igualdad para personas en todas partes del mundo. En estas páginas nos ponemos nuestras tiaras y nuestros brazaletes indestructibles para unirnos al festejo de los ochenta años de la princesa Diana, recorriendo su pasado, presente y futuro. Superman es otro símbolo de la justicia, pero al protector de Metrópolis lo espera un futuro sombrío, donde ha desaparecido a manos de su peor enemigo... ¡uno que nadie espera! Lois Lane, antiguo interés romántico de Clark Kent, cuenta cómo fueron los últimos días del Hombre de Acero, en una aventura que homenajea al primer superhéroe de la historia.</p>
+                    <p>Páginas: 64<br>
+                        Formato: 20x29x2cm<br>
+                        Peso: 0.60 kgs<br>
+                        ISBN: 9788416998166</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
