--- a/front/detail_product_pages/Detalle_Comic_X-Men.html
+++ b/front/detail_product_pages/Detalle_Comic_X-Men.html
@@ -48,32 +48,32 @@
             <div class="product-imgs">
                 <div class="img-display">
                     <div class="img-showcase">
-                        <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
-                        <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                        <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
+                        <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
+                        <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
                     </div>
                 </div>
                 <div class="img-select">
                     <div class="img-item">
                         <a href="#" data-id="1">
-                            <img src="/front/images/batmanBN1.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="2">
-                            <img src="/front/images/batmanBN2.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                     <div class="img-item">
                         <a href="#" data-id="3">
-                            <img src="/front/images/batmanBN3.jpg" alt="Batman_comic">
+                            <img src="/front/images/marvel-xmen.jpg" alt="X-Men_Comic">
                         </a>
                     </div>
                 </div>
             </div>
             <!--Card Der-->
             <div class="product-content">
-                <h2 class="product-title">Batman Comic</h2>
+                <h2 class="product-title">X-Men comic</h2>
                 <a href="#" class="product-link">Descubre más comics</a>
                 <div class="product-rating">
                     <i class="fa-solid fa-star"></i>
@@ -81,19 +81,19 @@
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star-half-stroke"></i>
-                    <span>4.5 (12)</span>
+                    <span>4.7 (5)</span>
                 </div>
                 <div class="product-price">
-                    <p class="last-price">Antes: <span>$3800.00</span></p>
-                    <p class="new-price">Ahora: <span>$3040.00 (20% off)</span></p>
+                    <p class="last-price">Antes: <span>$14000.00</span></p>
+                    <p class="new-price">Ahora: <span>$9800.00 (30% off)</span></p>
                 </div>
                 <div class="product-detail">
                     <h2>Descripción:</h2>
-                    <p>El título es simple. El talento es espectacular. Presentada en escuetos tonos de blanco y negro que representan con facilidad la cosmovisión de Batman, llega esta colección de las aventuras del Caballero Oscuro. Con historias y dibujos de una alineación estelar de creadores de la industria del cómic, no es de extrañar que esta colección haya sido galardonada con el prestigioso premio Eisner en la categoría mejor antología y mejor historia corta (Héroes, por Archie Goodwin y Gary Gianni). </p>
-                    <p>Páginas: 224<br>
-                        Formato: 26x17x2cm<br>
-                        Peso: 0.6 kgs..<br>
-                        ISBN: 978-987-724-803-6</p>
+                    <p>¡El amanecer de los mutantes no para de asombrar! Fuera de Krakoa, Domino tiene una misión: encontrar a la persona que, de alguna forma, le está robando sus poderes... ¡antes de que se le acabe la suerte! Los Marauders todavía no asimilan lo drástico de su última pérdida. Y, por su parte, Wolverine continúa su cruzada imposible contra el Cartel de las Flores. Además: un capítulo especial de Jean Grey y Emma Frost que te dejará sin palabras.</p>
+                    <p>Páginas: 64<br>
+                        Formato: 20x29x2cm<br>
+                        Peso: 0.60 kgs<br>
+                        ISBN: 9788416998166</p>
                     <ul>
                         <li>Disponibilidad: En Stock</li>
                         <li>Envíos: A todo el país</li>
