arreglos del form

--- a/registro.html
+++ b/registro.html
@@ -3,15 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Planet Superheroes</title>
         <link rel="stylesheet" href="/front/css/registro.css">
+        <link rel="shortcut icon" href="./front/images/logo_planet - favicon.ico" type="image/x-icon">
         <style>
             
         </style>
     </head>
     <body>
         <section class="form-register">
-            <div class="title">
+            <div class="title-logo">
                 <img class= "logo-register" src="./front/images/logo_planet.png" alt="">
                 <h1>PLANET SUPER HEROES</h1>
                 
