--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Superheros</title>
+    <title>Planet Superheroes</title>
     <link rel="stylesheet" href="style.css" />
     <script
       src="https://kit.fontawesome.com/6ff66d206f.js"
