--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Planet Superheroes</title>
+        <title>Registro</title>
         <link rel="stylesheet" href="/front/css/registro.css">
         <link rel="shortcut icon" href="./front/images/logo_planet - favicon.ico" type="image/x-icon">
         <style>
