agrego favicon about

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./images/Logo-comic_store.png" type="image/x-icon">
+    <link rel="shortcut icon" href="front/images/Logo-comic_store.png" type="image/x-icon">
     <link rel="stylesheet" href="/front/css/styles_about.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>About</title>
