--- a/index.html
+++ b/index.html
@@ -25,14 +25,15 @@
             </label>  
             <!-- Fin Menu Hamburguesa  -->
             <ul class="nav__links">  
-                <li>
-                    <a href="#">INICIO</a>
-                </li>                      
+                                 
                 <li>
                     <a href="/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li>
                     <a href="/front/marvelProducts.html">PRODUCTOS</a>
+                </li>
+                <li>
+                    <a href="#form">CONTACTO</a>
                 </li>
                 <li>
                     <a href="/login.html">INGRESAR</a>
