se agrega logo al login

--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 <!-- Formulario Iniciar Sesión -->
 <body>
     <section class="form-login">
+        <img src="/front/images/logo_planet.png" alt="Logo" class="logo">
         <h1>PLANET SUPER HEROES</h1>
         <h3>
             Inicio Sesión
