--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <section class="form-register">
-            <div class="title-logo">
+            <div class="title">
                 <img class= "logo-register" src="./front/images/logo_planet.png" alt="">
                 <h1>PLANET SUPER HEROES</h1>
                 
