--- a/front/pages/registro.html
+++ b/front/pages/registro.html
@@ -13,7 +13,7 @@
     <body>
         <section class="form-register">
             <div class="title">
-                <img class= "logo-register" src="./front/images/logo_planet.png" alt="">
+                <img class= "logo-register" src="/front/images/logo_planet.png" alt="">
                 <h1>PLANET SUPER HEROES</h1>
                 
             </div>
