--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
             <ul class="nav__links">  
                                  
                 <li>
-                    <a href="/about.html">¿QUIENES SOMOS?</a>
+                    <a href="/front/pages/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li>
-                    <a href="/front/marvelProducts.html">PRODUCTOS</a>
+                    <a href="/front/pages/marvelProducts.html">PRODUCTOS</a>
                 </li>
                 <li>
                     <a href="#form">CONTACTO</a>
                 </li>
                 <li>
-                    <a href="/login.html">INGRESAR</a>
+                    <a href="/front/pages/login.html">INGRESAR</a>
                 </li>
                 <li>
-                    <a href="/registro.html">REGISTRO</a>
+                    <a href="/front/pages/registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
@@ -74,15 +74,15 @@
 <section id="banner">
 <div class="container">
     <div class="button">
-        <img src="../BOTONERA/images/free.png" alt="Envío gratis Córdoba capital">
+        <img src="/front/images/free.png" alt="Envío gratis Córdoba capital">
         <p class="button-text">Envío gratis Córdoba capital</p>
     </div>
     <div class="button">
-        <img src="../BOTONERA/images/tarjetas.png" alt="Todos los medios de pago">
+        <img src="/front/images/tarjetas.png" alt="Todos los medios de pago">
         <p class="button-text">Todos los medios de pago</p>
     </div>
     <div class="button">
-        <img src="../BOTONERA/images/30dto.png" alt="Descuentos Exclusivos">
+        <img src="/front/images/30dto.png" alt="Descuentos Exclusivos">
         <p class="button-text">Descuentos Exclusivos</p>
     </div>
 </div>
