--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -30,17 +30,15 @@
                     <li>
                         <a href="/index.html">INICIO</a>
                     </li>                      
+                
                     <li>
-                        <a href="/about.html">¿QUIENES SOMOS?</a>
+                        <a href="marvelProducts.html">PRODUCTOS</a>
                     </li>
                     <li>
-                        <a href="/front/marvelProducts.html">PRODUCTOS</a>
+                        <a href="login.html">INGRESAR</a>
                     </li>
                     <li>
-                        <a href="/login.html">INGRESAR</a>
-                    </li>
-                    <li>
-                        <a href="/registro.html">REGISTRO</a>
+                        <a href="registro.html">REGISTRO</a>
                     </li>
                 </ul>   
             </nav>
