--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -3,26 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Inicio Sesion</title>
+    <title>Login</title>
     <link rel="stylesheet" href="/front/css/login.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
-    </style>
 </head>
-
+<!-- Formulario Iniciar Sesión -->
 <body>
     <section class="form-login">
+        <img src="/front/images/logo_planet.png" alt="Logo" class="logo">
         <h1>PLANET SUPER HEROES</h1>
-    <h5>
-        Inicio Sesion
-    </h5>
-    <input class="controles" type="text" name="usuario" value="" placeholder="Usuario">
-    <input class="controles" type="password" name="Contrasena" value="" placeholder="Contraseña">
-    <input class="botom" type="submit" name="" value="Ingresar">
-     <p><a href="#">¿Olvidaste tu contraseña?</a></p>
-     
+        <h3>
+            Inicio Sesión
+        </h3>
+        <input class="controles" type="text" name="usuario" value="" placeholder="Usuario">
+        <input class="controles" type="password" name="Contraseña" value="" placeholder="Contraseña">
+        <input class="botom" type="submit" name="" value="Ingresar">
+            <p><a href="#">¿Olvidaste tu contraseña?</a></p>
+        
+        <a class="go_back" href="/index.html">Volver al Inicio</a>
     </section>
 <body>
-   
-
 </html>
