--- a/front/pages/marvelProducts.html
+++ b/front/pages/marvelProducts.html
@@ -30,16 +30,16 @@
                         <a href="/index.html">INICIO</a>
                     </li>                      
                     <li>
-                        <a href="/about.html">¿QUIENES SOMOS?</a>
+                        <a href="about.html">¿QUIENES SOMOS?</a>
                     </li>
                     <li>
-                        <a href="/front/marvelProducts.html">PRODUCTOS</a>
+                        <a href="marvelProducts.html">PRODUCTOS</a>
                     </li>
                     <li>
-                        <a href="/login.html">INGRESAR</a>
+                        <a href="login.html">INGRESAR</a>
                     </li>
                     <li>
-                        <a href="/registro.html">REGISTRO</a>
+                        <a href="registro.html">REGISTRO</a>
                     </li>
                 </ul>   
             </nav>
@@ -48,8 +48,8 @@
         <h1> Nuestros Productos</h1>
 
         <div class="card_section-titulo">
-        <a href="/front/marvelProducts.html"><h2 class="card_section-titulo1">Marvel Comics</h2></a>
-        <a href="/front/dcProducts.html"><h2 class="card_section-titulo2"> DC Comics</h2></a>
+        <a href="marvelProducts.html"><h2 class="card_section-titulo1">Marvel Comics</h2></a>
+        <a href="dcProducts.html"><h2 class="card_section-titulo2"> DC Comics</h2></a>
     </div>
 
         <section id="card_section-root">
