paginas de detalles

--- a/front/pages/dcProducts.html
+++ b/front/pages/dcProducts.html
@@ -63,7 +63,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman_Joker.html"> Ver Detalles</a> </button>
           </div>
         </div>
         <div>
