enrutado comics dc

--- a/front/pages/dcProducts.html
+++ b/front/pages/dcProducts.html
@@ -71,7 +71,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman.html"> Ver Detalles</a> </button>
           </div>
         </div>
         <div>
@@ -79,7 +79,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batichica</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -87,7 +87,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Liga de la Justicia</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Justice_League.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -95,7 +95,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman_y_Flash.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -103,7 +103,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Mujer Maravilla</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Superman_y_Wonderwoman.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -111,7 +111,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Flash</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Flashpoint.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -119,7 +119,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Supergirl</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
@@ -127,7 +127,7 @@
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button">Agregar al carrito</button>
+            <button class="button"><a href="/front/pages/detail_product_pages//Detalle_Comic_Superman_The_Last.html"> Ver Detalles</a></button>
           </div>
         </div>
       </section>
