--- a/front/pages/detail_product_pages/Detalle_Comic_X-Men.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_X-Men.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="/index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="/front/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
                     <a class="nav-link" href="/front/marvelProducts.html">PRODUCTOS</a>
