--- a/front/pages/detail_product_pages/Detalle_Comic_DD.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_DD.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Superheroes - Detalle Comic</title>
     <link rel="stylesheet" href="/front/css/detail.css">
+    <link rel="icon" href="/front/images/logo_planet - favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">    
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
