--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Login</title>
+    <link rel="icon" href="/front/images/logo_planet - favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/front/css/login.css">
 </head>
 <!-- Formulario Iniciar Sesión -->
