--- a/front/pages/detail_product_pages/Detalle_Comic_Avengers.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_Avengers.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planet Superheroes - Detalle Comic</title>
+    <link rel="icon" href="/front/images/logo_planet - favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/front/css/detail.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
