Revision de cierre de etiquetas body

--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -153,4 +153,5 @@
         &copy; Desarrolladores 2.0
     </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </body>
 </html>
