corrijo ruta favicon

--- a/front/pages/registro.html
+++ b/front/pages/registro.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Registro</title>
         <link rel="stylesheet" href="/front/css/registro.css">
-        <link rel="icon" href="/front/images/logo_planet - favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
         <link rel="shortcut icon" href="./front/images/logo_planet - favicon.ico" type="image/x-icon">
         <style>
             
