--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
                     <a href="#form">CONTACTO</a>
                 </li>
                 <li>
-                    <a href="/front/pages/login.html">INGRESAR</a>
+                    <a href="/PFS-Ecommerce-2023/front/pages/login.html">INGRESAR</a>
                 </li>
                 <li>
-                    <a href="/front/pages/registro.html">REGISTRO</a>
+                    <a href="/PFS-Ecommerce-2023/front/pages/registro.html">REGISTRO</a>
                 </li>
             </ul>   
         </nav>
