agrego validacion de direccion y 2da contraseña

--- a/front/pages/registro.html
+++ b/front/pages/registro.html
@@ -51,7 +51,7 @@
                         <small></small>
                     </div>
 
-                    <!-- <div class="form__field">
+                    <div class="form__field">
                         <input 
                             type="text" 
                             placeholder="Dirección"
@@ -59,7 +59,8 @@
                             value=""
                             id="address"
                         />
-                    </div> -->
+                        <small></small>   
+                    </div>
 
                     <div class="form__field">
                         <input 
