Se agregan validaciones de transferencia

--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -17,7 +17,7 @@
         <header>
             <nav class="navbar">
                 <a class="navbar-logo" href="/index.html">
-                    <img class="logo" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+                    <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
                 </a>
                 <!-- Menu Hamburguesa -->
                 <input type="checkbox" id="check">
@@ -71,7 +71,7 @@
                         </div>
                         <div class="col-md-6">
                             <figure>
-                                <img src="/front/images/localImage3.jpeg" alt="Imagen Fisico del Local" class="img-fluid" style="border-radius: 30px;">
+                                <img src="/front/images/localImage3.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
                             </figure>
 
                         </div>
@@ -92,7 +92,7 @@
                         </div>
                         <div class="col-md-6">
                             <figure>
-                                <img src="/front/images/localImage1.jpeg" alt="Imagen Fisico del Local" class="img-fluid" style="border-radius: 30px;">
+                                <img src="/front/images/localImage1.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
                             </figure>
 
                         </div>
