integro la sección reseñas | ruteo actualizado | agrego imagenes

--- a/front/pages/login.html
+++ b/front/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Login</title>
     <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/PFS-Ecommerce-2023/front/css/login.css">
+    <link rel="stylesheet" href="/front/css/login.css">
 </head>
 <!-- Formulario Iniciar Sesión -->
 <body>
@@ -51,6 +51,6 @@
         <a class="go_back" href="/index.html">Volver al Inicio</a>
         </form>
     </section>
-    <script src="/PFS-Ecommerce-2023/front/js/validacionLogin.js"></script>
+    <script src="/front/js/validacionLogin.js"></script>
 <body>
 </html>
